<resources>
    <string name="app_name">Diwan Alshatti</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_admin">Admin</string>

    <string name="diwan_alshatti">Diwan Alshatti</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_btn">Login</string>
    <string name="remember_me_cb">Remember me</string>
    <string name="password_hint">PASSWORD</string>
    <string name="username_hint">USERNAME</string>
    <string name="logout_btn">LOGOUT</string>
    <string name="enter_name_hint">ENTER NAME</string>
    <string name="choose_date_hint">CHOOSE DATE</string>
    <string name="comments_hint">COMMENTS</string>
    <string name="add_btn_text">ADD</string>
    <string name="cancel_btn_text">CANCEL</string>

    <string name="banner_ad_unit_id">ca-app-pub-8587947849564336/4942193200</string>
</resources>
