<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_error"
            android:textColor="#c0392b"
            android:visibility="invisible"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/et_username"
        android:hint="@string/username_hint"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/tv_error"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:layout_below="@+id/et_username"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me_cb"
            android:checked="true"
            android:id="@+id/cb_remember"
            android:layout_below="@+id/et_password"
            android:layout_marginLeft="5dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/login_btn"
        android:layout_below="@+id/cb_remember"
        android:layout_marginTop="10dp"
        android:onClick="login_clicked"/>
    </RelativeLayout>

</FrameLayout>
