<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.malabdullah.alshattidiwan.UpdateMemberFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_hint"/>

        <EditText
            android:id="@+id/et_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_date_hint"/>

        <EditText
            android:id="@+id/et_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comments_hint"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minHeight="150dp"
            android:gravity="top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UPDATE"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"/>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DELETE"
                android:background="@color/colorDelete"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANCEL"/>

    </LinearLayout>

</FrameLayout>
